--- a/student/src/main/res/layout/dialog_edit.xml
+++ b/student/src/main/res/layout/dialog_edit.xml
@@ -6,35 +6,80 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="15dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/edt_name"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@android:color/transparent"
-            android:hint="name"
-            android:padding="10dp"
-            app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/edt_class"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@android:color/transparent"
-            android:hint="class room"
-            android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@id/edt_name" />
+            <EditText
+                android:id="@+id/edt_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@android:color/transparent"
+                android:hint="Tên học sinh"
+                android:padding="10dp"
+                app:layout_constraintRight_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/edt_class"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@android:color/transparent"
+                android:hint="Tên lớp"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/edt_name" />
+
+            <EditText
+                android:id="@+id/qq"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@android:color/transparent"
+                android:hint="Quê quán"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/edt_name" />
+
+            <EditText
+                android:id="@+id/ns"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@android:color/transparent"
+                android:hint="Ngày sinh"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/edt_name" />
+
+            <EditText
+                android:id="@+id/cccd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@android:color/transparent"
+                android:hint="CCCD"
+                android:padding="10dp"
+                android:inputType="number"
+                app:layout_constraintTop_toBottomOf="@id/edt_name" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
         <Button
             android:id="@+id/btn_edit"
@@ -47,8 +92,7 @@
             android:text="Sửa dữ liệu"
             app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
             app:layout_constraintStart_toStartOf="parent"
-
-            app:layout_constraintTop_toBottomOf="@id/edt_class" />
+            app:layout_constraintTop_toBottomOf="@id/ll" />
 
         <Button
             android:id="@+id/btn_cancel"
