--- a/student/src/main/res/layout/activity_module_main.xml
+++ b/student/src/main/res/layout/activity_module_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -7,14 +8,23 @@
         android:layout_height="match_parent"
         tools:context=".ModuleMainActivity">
 
+        <EditText
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:hint="tìm kiếm"
+            android:padding="10dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcl_student"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            tools:listitem="@layout/item_student"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/search_bar"
+            tools:listitem="@layout/item_student" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_add_student"
