--- a/student/src/main/res/menu/menu.xml
+++ b/student/src/main/res/menu/menu.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/item1"
-        android:icon="@android:drawable/ic_delete"
+        android:icon="@drawable/remove"
         android:orderInCategory="100"
         android:title="Item1"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/item2"
-        android:icon="@drawable/ic_baseline_call_missed_outgoing_24"
+        android:icon="@drawable/iv_logout"
         android:orderInCategory="100"
         android:title="Item1"
         app:showAsAction="always" />
