--- a/student/src/main/res/layout/activity_login.xml
+++ b/student/src/main/res/layout/activity_login.xml
@@ -2,52 +2,53 @@
 <layout>
 
     <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:gravity="top"
         android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="6dp"
         android:padding="10dp"
         tools:context=".ModuleMainActivity">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tên tài khoản"
+            android:text="Username"
             android:textColor="@android:color/black" />
 
         <EditText
-            android:padding="10dp"
-            android:hint="Tên tài khoản"
             android:id="@+id/edt_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp"
+            android:hint="Account"
+            android:padding="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="Mật khẩu"
+            android:text="Password"
             android:textColor="@android:color/black" />
 
         <EditText
-            android:padding="10dp"
-            android:inputType="textPassword"
             android:id="@+id/edt_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:hint="Nhập mật khẩu" />
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:padding="10dp" />
 
         <Button
             android:id="@+id/submit"
-            android:background="#00C4FF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Đăng nhập" />
+            android:background="#EDFF9D52"
+            android:text="Login" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
