--- a/student/src/main/res/layout/dialog_add.xml
+++ b/student/src/main/res/layout/dialog_add.xml
@@ -7,10 +7,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="15dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginHorizontal="10dp"
         android:background="@android:color/white"
+        android:paddingBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,14 +20,24 @@
             android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent">
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="Thêm mỹ phẩm"
+                android:textColor="#EDFF9D52"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/edt_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="Tên học sinh"
+                android:background="@drawable/border"
+                android:hint="Tên mỹ phẩm"
                 android:padding="10dp"
                 app:layout_constraintRight_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -37,49 +46,26 @@
                 android:id="@+id/edt_class"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="Tên lớp"
-                android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/edt_name" />
-
-            <EditText
-                android:id="@+id/qq"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="Quê quán"
-                android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/edt_name" />
-
-            <EditText
-                android:id="@+id/ns"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="Ngày sinh"
-                android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/edt_name" />
-
-            <EditText
-                android:id="@+id/cccd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="CCCD"
-                android:padding="10dp"
+                android:background="@drawable/border"
+                android:hint="Gía tiền"
                 android:inputType="number"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/edt_name" />
+
+            <EditText
+                android:id="@+id/edtHSD"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/border"
+                android:hint="Hạn sử dụng"
+                android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@id/edt_name" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
 
         <Button
             android:id="@+id/btn_edit"
@@ -88,8 +74,9 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
-            android:background="#00D9FF"
-            android:text="Thêm dữ liệu"
+            android:textColor="@android:color/white"
+            android:background="#EDFF9D52"
+            android:text="Tạo mỹ phẩm"
             app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ll" />
@@ -100,8 +87,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:background="#8D798081"
-            android:text="Hủy bỏ"
+            android:background="#8D2C2C2C"
+            android:text="Đóng"
+            android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_edit"
             app:layout_constraintTop_toTopOf="@id/btn_edit" />
