--- a/student/src/main/res/layout/dialog_edit.xml
+++ b/student/src/main/res/layout/dialog_edit.xml
@@ -7,10 +7,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="15dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="@android:color/white"
+        android:paddingBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -25,10 +25,10 @@
                 android:id="@+id/edt_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="Tên học sinh"
+                android:background="@drawable/border"
+                android:hint="Tên mỹ phẩm"
                 android:padding="10dp"
                 app:layout_constraintRight_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -37,45 +37,23 @@
                 android:id="@+id/edt_class"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="Tên lớp"
-                android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/edt_name" />
-
-            <EditText
-                android:id="@+id/qq"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="Quê quán"
-                android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/edt_name" />
-
-            <EditText
-                android:id="@+id/ns"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="Ngày sinh"
-                android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/edt_name" />
-
-            <EditText
-                android:id="@+id/cccd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:hint="CCCD"
-                android:padding="10dp"
+                android:background="@drawable/border"
+                android:hint="Gía tiền"
                 android:inputType="number"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/edt_name" />
+
+            <EditText
+                android:id="@+id/edtHSD"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/border"
+                android:hint="Hạn sử dụng"
+                android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@id/edt_name" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -88,8 +66,9 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
-            android:background="#00D9FF"
+            android:background="#EDFF9D52"
             android:text="Sửa dữ liệu"
+            android:textColor="@android:color/white"
             app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ll" />
@@ -102,6 +81,7 @@
             android:layout_marginRight="16dp"
             android:background="#8D798081"
             android:text="Hủy bỏ"
+            android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_edit"
             app:layout_constraintTop_toTopOf="@id/btn_edit" />
