--- a/student/src/main/res/layout/item_student.xml
+++ b/student/src/main/res/layout/item_student.xml
@@ -1,58 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="8dp">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/img_student"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:src="@drawable/ic_baseline_account_box_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_full_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:maxLines="1"
-        android:text="Name1"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@id/tv_edit"
-        app:layout_constraintStart_toEndOf="@+id/img_student"
-        app:layout_constraintTop_toTopOf="@id/img_student" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_classroom"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:text="CT1"
-        app:layout_constraintStart_toStartOf="@id/tv_full_name"
-        app:layout_constraintTop_toBottomOf="@id/tv_full_name" />
+        android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        app:layout_constraintEnd_toStartOf="@id/img_delete"
-        android:id="@+id/tv_edit"
-        android:layout_width="50sp"
-        android:layout_height="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="10dp"
-        android:src="@drawable/ic_baseline_edit_24"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/img_student" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_student"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:padding="10dp"
+            android:src="@drawable/skincare"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/img_delete"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_baseline_delete_forever_24" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#205A5A5A"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/tv_edit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:padding="5dp"
+            android:src="@drawable/ic_baseline_edit_24"
+            app:layout_constraintBottom_toBottomOf="@+id/img_student"
+            app:layout_constraintEnd_toStartOf="@id/img_delete" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_delete"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:padding="5dp"
+            android:src="@drawable/delete"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/img_student"
+            app:layout_constraintTop_toTopOf="@id/tv_edit" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:paddingHorizontal="5dp"
+            android:id="@+id/name"
+            android:layout_width="0dp"
+            android:textSize="14sp"
+            android:layout_height="wrap_content"
+            tools:text="Sản phẩm 1Sản phẩm 1Sản phẩm 1Sản phẩm 1Sản phẩm 1"
+            android:textColor="@android:color/black"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/amount" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:paddingHorizontal="5dp"
+            android:id="@+id/amount"
+            android:layout_width="0dp"
+            android:textSize="12sp"
+            android:layout_height="wrap_content"
+            android:text="1000.000đ"
+            android:textColor="#B2000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_edit"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
