--- a/student/src/main/res/layout/activity_filter.xml
+++ b/student/src/main/res/layout/activity_filter.xml
@@ -10,7 +10,16 @@
 
         <include
             android:id="@+id/include"
-            layout="@layout/layout_toolbar" />
+            layout="@layout/layout_toolbar_filter"/>
+
+        <EditText
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:hint="tìm kiếm"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/include"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcl_student"
@@ -18,18 +27,8 @@
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include"
+            app:layout_constraintTop_toBottomOf="@+id/search_bar"
             tools:listitem="@layout/item_student" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/img_add_student"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_margin="20dp"
-            android:padding="6dp"
-            android:src="@drawable/ic_baseline_add_circle_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
